--- a/hypernode/src/components/chat.css
+++ b/hypernode/src/components/chat.css
@@ -1,8 +1,11 @@
 .chatcontain {
+  position: fixed;
+  right: 10px;
+  bottom: 5px;
   display: flex;
   align-items: flex-end;
   justify-content: space-around;
-  width: 40%;
+  width: 45%;
   padding: 10px;
   margin: auto;
 }
@@ -22,9 +25,10 @@
   visibility: hidden;
 }
 .user {
-  padding: 5px;
-  background-color: violet;
-  color: black;
+  box-sizing: border-box;
+  padding: 10px;
+  background-color: #5dadf9;
+  color:white;
   border-radius: 15px 0px 15px 15px;
 }
 .userbox {
@@ -39,6 +43,7 @@
 }
 
 .chatwindow {
+  margin-top: 10px;
   height: 500px;
   box-sizing: border-box;
   overflow: scroll;
@@ -49,34 +54,40 @@
   align-items: center;
   gap: 5px;
   justify-content: space-between;
-  background-color: blueviolet;
+  background: #1A2980;
+  background: -webkit-linear-gradient(to left, #26D0CE, #1A2980); 
+  background: linear-gradient(to left, #26D0CE, #1A2980); 
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
 }
 .chatip > input {
-  border: none;
+  font-size: 16px;
   border-radius: 5px;
   height: 30px;
   width: 70%;
-  border: gray;
+  border: 2px solid black;
+  padding-left: 10px;
+  color: #5dadf9;
 }
 .chatip > button {
   font-size: 18px;
   cursor: pointer;
   height: 35px;
   width: 25%;
-  color: blueviolet;
+  color: #5dadf9;
   border-radius: 10px;
+  background-color: white;
 }
 .botimage > img {
   cursor: pointer;
   height: 250px;
 }
 .bottext {
+  box-sizing: border-box;
+  padding: 10px;
   line-height: 5px;
-  padding: 5px;
   color: white;
-  background-color: green;
+  background-color: navy;
   border-radius: 0px 20px 20px 20px;
 }
 .botex > img {
@@ -93,12 +104,21 @@
   height: 50px;
   font-size: 18px;
   font-style: italic;
-  background-color: blueviolet;
+  background: #1A2980;
+  background: -webkit-linear-gradient(to left, #26D0CE, #1A2980); 
+  background: linear-gradient(to left, #26D0CE, #1A2980); 
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
+  color: white;
+}
+.reset{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
 }
 .reset > img {
-  height: 30px;
+  height: 20px;
 }
 .reset>img:active{
     transform: rotate(180deg)
