--- a/hypernode/src/components/navbar.css
+++ b/hypernode/src/components/navbar.css
@@ -37,11 +37,13 @@ background: linear-gradient(to left, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, Fi
     width: 150px;
     border: none;
     padding: 0 20px 0 20px;
+    border-radius: 5px;
 }
 .login{
 cursor: pointer;
-padding: 0 20px 0 20px;
-border: 1px solid white;
+padding: 0 30px 0 30px;
+border: 2px solid white;
 color: white;
 background-color:#25c6c9;
+border-radius: 5px;
 }
