--- a/hypernode/src/components/chat.css
+++ b/hypernode/src/components/chat.css
@@ -36,7 +36,7 @@
   justify-content: flex-end;
 }
 .bot {
-  margin-top: 2px;
+  margin-top: 10px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -85,10 +85,12 @@
 .bottext {
   box-sizing: border-box;
   padding: 10px;
-  line-height: 5px;
+  line-height: 20px;
   color: white;
   background-color: navy;
   border-radius: 0px 20px 20px 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .botex > img {
   height: 40px;
@@ -122,4 +124,9 @@
 }
 .reset>img:active{
     transform: rotate(180deg)
+}
+
+.serlink{
+  color: white;
+  font-weight: 600;
 }
