--- a/hypernode/src/components/footer.css
+++ b/hypernode/src/components/footer.css
@@ -1,61 +1,73 @@
-.footer{
+.footer {
     box-sizing: border-box;
     color: white;
-    height: 380px;
+    height: auto;
 }
-.contacts{
+
+.contacts {
     padding-top: 30px;
     text-align: left;
     display: flex;
     justify-content: space-evenly;
-    height: 300px;
-    background-color: 
-    #313141;
+    height: 240px;
+    background-color: #313141;
     font-size: 14px;
-    padding-bottom: 50px;
 }
-.contacts>div>p{
+
+.contacts>div>p {
     margin-top: 10px;
 }
-.copyright{
+
+.copyright {
     height: 80px;
-    background-color:#1f1f29 ;
+    background-color: #1f1f29;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    gap: 5%;
+    /* padding-left: 30%;
+    padding-right: 30%; */
 }
-.foottitle{
-   color : #5f5452;
-   margin-bottom: 20px;
+
+.foottitle {
+    color: lightcoral;
+    margin-bottom: 20px;
 }
-.social{
+
+.social {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 5px;
 }
-.social>img{
+
+.social>img {
     height: 30px;
 }
-.site>select{
+
+.site>select {
     height: 40px;
     width: 150px;
     border-radius: 5px;
 }
-.copyright>div{
+
+.copyright>div {
     margin-right: 10px;
     display: flex;
     align-items: center;
     gap: 8px;
 }
-.copyright>p{
+
+.copyright>p {
     font-size: 12px;
     margin-left: 10px;
-    
+
 }
-.copyright>div>img{
-height: 30px;
+
+.copyright>div>img {
+    height: 30px;
 }
-.site{
+
+.site {
     margin-top: 20px;
 }
