--- a/hypernode/src/components/hypernode/Courses.module.css
+++ b/hypernode/src/components/hypernode/Courses.module.css
@@ -78,17 +78,14 @@ body {
     /* font-size: 14px; */
     line-height: 30px;
     cursor: pointer;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    text-align: left;
 }
 
 .prodDesc {
     font-size: 15px;
     line-height: 17px;
     color: #757575;
+    text-align: left;
 }
 
 .ratingDiv {
